--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,35 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		jcenter()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.10.0"
 	}
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "com.commercehub.gradle.plugin.avro"
 
 
 group = 'com.bettercloud.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java','src/generated/java']
+		}
+	}
+}
+
 repositories {
 	mavenCentral()
+	jcenter()
 }
 
 
@@ -49,3 +61,10 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
+task generateAvro(type: com.commercehub.gradle.plugin.avro.GenerateAvroJavaTask) {
+	source("src/avro/")
+	outputDir = file("src/generated/java")
+}
+
+compileJava.source(generateAvro.outputs)
